--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -24,3 +24,9 @@
     padding: 25rem 0 15rem 0; 
     margin-top: -14vh;
 }
+
+.section-stories {
+    padding: 15rem 0;
+    position: relative;
+
+}
