--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,7 +1,7 @@
 .btn {
-
+    &,
     &:link ,
-    &:visited {
+    &:visited, {
         text-transform: uppercase;
         text-decoration: none;
         padding: 1.5rem 3rem;
@@ -10,8 +10,11 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+        border: none;
         
     }
+
+
     &:hover {
         transform: translateY(-.3rem);
         box-shadow: 0 1rem 2rem rgba($color-black, .2);
@@ -23,7 +26,10 @@
         }
     
     }
-    &:active {
+    &:active,
+    &:focus
+    {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
