--- a/Natours/starter/sass/components/_form.scss
+++ b/Natours/starter/sass/components/_form.scss
@@ -10,6 +10,7 @@
         border-bottom: 3px solid transparent;
         width: 90%;
         display: block;
+        transition: all .3s;
         
         &:focus {
             outline: none;
@@ -39,5 +40,52 @@
         margin-top: .7rem;
         display: block;
         transition: all .4s;
+    }
+
+    &__radio-group {
+        width: 49%;
+        display: inline-block;
+    }
+
+    &__radio-label {
+        font-size: $default-font-size;
+        cursor: pointer;
+        position: relative;
+        padding-left: 4.5rem;
+    }
+
+    &__radio-button {
+        height: 3rem;
+        width: 3rem;
+        border: 5px solid $color-primary;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        top: -.5rem;
+
+        &::after {
+            height: 1.3rem;
+            width: 1.3rem;
+            content: "";
+            display:block;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-55%, -55%);
+            background-color:$color-primary;
+            opacity: 0;
+            transition: opacity .3s;
+            backface-visibility: hidden;
+        }
+    }
+
+    &__radio-input:checked ~ &__radio-label &__radio-button::after   {
+        opacity: 1;
+    }
+
+    &__radio-input {
+        display: none;
     }
 }
