--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -49,6 +49,8 @@
             background-color: $color-primary;
         }
     }
+
+    //effect
     &:after {
         content: '';
         display: inline-block;
