--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -7,9 +7,24 @@
     box-sizing: inherit;
 }
 html {
-    font-size: 62.5%;
-}
+    font-size: 62.5%; //1rem = 10px; 10/16
+
+    @include respond(tab-land){ // width < 1200px
+        font-size: 56.25%;//1rem = 9px; 9/16
+    }
+    @include respond(tab-port){ //width < 900px
+        font-size: 50%;//1rem = 8px; 8/16
+    }
+    @include respond(big-desktop){
+        font-size: 75%;//1rem = 12px; 12/16
+    }
+} 
 body {
      box-sizing: border-box; /*it will make the width/height to count 
     the padding and the border*/
+    padding: 3rem;
+    @include respond(tab-port){ //width < 900px
+        padding: 0;
+    }
+
 }
