--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
     
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
    
 }
 .heading-primary{
@@ -12,7 +11,7 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;/*determines whether the back face of an element is visible when turned towards the user.*/
     margin-bottom: 3rem;
-
+    
     &--main {
         display: block;
         font-size: 6rem;
@@ -21,7 +20,11 @@ body {
     
         animation-name: moveInLeft;
         animation-duration: 1s;
-        animation-timing-function: ease-in-out
+        animation-timing-function: ease-in-out;
+        @include respond(phone){ //width < 900px
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     
         /*
             animation-delay: 3s;
@@ -34,6 +37,9 @@ body {
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-in-out;
+        @include respond(phone){ //width < 900px
+            letter-spacing: .5rem;
+        }
 }
 }
 
@@ -49,6 +55,13 @@ body {
     color: transparent;
     transition: all .2s;
     letter-spacing: 2px;
+
+    @include respond(tab-port){ //width < 900px
+        font-size: 3rem;
+    }
+    @include respond(phone){ //width < 900px
+        font-size: 2.5rem;
+    }
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1);
         text-shadow:.5rem 1rem 2rem rgba(0, 0, 0, .2)
