--- a/Natours/starter/sass/components/_composition.scss
+++ b/Natours/starter/sass/components/_composition.scss
@@ -9,6 +9,13 @@
         z-index: 10;
         outline-offset: 1.9rem;
 
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 33.33333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+        }
+
         &:hover {
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
             transform: scale(1.05) translateY(-.5rem);
@@ -19,14 +26,28 @@
         &--p1 {
             left: 0;
             top: -2rem; 
+            @include respond(tab-port) {
+                top: 0;
+                transform: scale(1.2);
+            }
         }
         &--p2 {
             right: 0;
-            top: 2rem; 
+            top: 2rem;
+            @include respond(tab-port) {
+                top: -1rem;
+                transform: scale(1.3);
+                z-index: 30;
+            }
         }
         &--p3 {
             left: 20%;
-            top: 10rem; 
+            top: 10rem;
+            @include respond(tab-port) {
+                top: 1rem;
+                left: 0;
+                transform: scale(1.1);
+            }
         }
     }
 
