--- a/Natours/starter/sass/components/_feature-box.scss
+++ b/Natours/starter/sass/components/_feature-box.scss
@@ -7,6 +7,9 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: transform .2s;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
     &:hover {
         transform: scale(1.03) translateY(-1.5rem);
     }
@@ -19,6 +22,9 @@
             $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
         color: transparent;
+        @include respond(tab-port) {
+            margin-bottom: .2rem;
+        }
     }
 
     &__text {
