--- a/Natours/starter/sass/components/_form.scss
+++ b/Natours/starter/sass/components/_form.scss
@@ -11,6 +11,10 @@
         width: 90%;
         display: block;
         transition: all .3s;
+
+        @include respond(phone) {
+            width: 100%;
+        }
         
         &:focus {
             outline: none;
@@ -45,6 +49,11 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-label {
