--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -7,7 +7,15 @@
     padding: 6rem;
     padding-left: 9rem;
     font-size: $default-font-size;
-    transform: skewX(-12deg);    
+    transform: skewX(-12deg);
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+    @include respond(phone) {
+        transform: skewX(0deg);
+    }
 
     &  > * {
         transform: skewX(12deg);    
@@ -23,6 +31,9 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem)  skewX(12deg);
         position: relative;
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0deg);
+        }
     }
 
     &__image {
@@ -34,7 +45,10 @@
     }
 
     &__text {
-        transform: skewX(12deg)
+        transform: skewX(12deg);
+        @include respond(phone) {
+            transform: skewX(0deg);
+        }
     }
 
     &__caption {
