--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -3,9 +3,19 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+        @include respond(tab-land) {
+            padding: 0 5rem;
+        }
+        @include respond(phone) {
+            margin-bottom: 4rem;
+        }
     }
 
     &__logo {
@@ -18,6 +28,10 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block;
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -57,8 +71,12 @@
         color: $color-grey-light-1;
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem; 
-        float: right;
         width: 80%;
+        float: right;
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 
 }
