--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -18,6 +18,15 @@
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         text-align: center;
         cursor: pointer;
+
+        @include respond(tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+        @include respond(phone) {
+            top: 2rem;
+            right: 2rem;
+        }
     
     }
 
@@ -32,6 +41,14 @@
         z-index: 20;
         transition: transform .8s cubic-bezier(0.86,0,0.07, 1);
         opacity: .95;
+        @include respond(tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+        @include respond(phone) {
+            top: 2.5rem;
+            right: 2.5rem;
+        }
     }
     &__nav {
         height: 100vh;
