--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -1,7 +1,14 @@
 .section-about {
     background-color: $color-grey-light-1;
     padding: 25rem 0;
-    margin-top: -20vh; 
+    margin-top: -20vh;
+
+    @include respond(tab-land) {
+        padding: 30rem 5rem;        
+    }
+    @include respond(tab-port) {
+        padding: 20rem 0;        
+    }
 }
 .section-features {
     padding: 20rem 0;
@@ -17,17 +24,33 @@
     &  > * {
         transform: skewY(7deg);
     }
+    @include respond(tab-land) {
+        padding: 10rem 5rem;        
+    }
+    @include respond(tab-port) {
+        padding: 10rem 0;        
+    }
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0; 
     margin-top: -14vh;
+
+    @include respond(tab-land) {
+        padding: 15rem 5rem 10rem 5rem;        
+    }
+    @include respond(tab-port) {
+        padding: 15rem 0 10rem 0;       
+    }
 }
 
 .section-stories {
     padding: 15rem 0;
     position: relative;
+    @include respond(tab-port) {
+        padding: 3rem 0;       
+    }
 
 }
 .section-book {
@@ -35,21 +58,51 @@
     background-image: linear-gradient(
         to right bottom, 
         $color-primary-light, $color-primary-dark);
-}
+        @include respond(tab-land) {
+            padding: 5rem;       
+        }
+        @include respond(tab-port) {
+            padding: 3rem 0;       
+        }
+    }
+    
 
 .book {
     background-image: linear-gradient(105deg, 
-    rgba($color-white, .7) 0%,
-         $color-white 50%,
-         transparent 50% ) ,
-         url(../img/nat-10.jpg);
+                        rgba($color-white, .9) 0%,
+                        rgba($color-white, .9) 50%,
+                            transparent 50% ) ,
+                            url(../img/nat-10.jpg);
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
-    height: 50rem;
+    
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, 
+                        rgba($color-white, .9) 0%,
+                        rgba($color-white, .9) 65%,
+                            transparent 65% ) ,
+                            url(../img/nat-10.jpg);
+         background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right, 
+    rgba($color-white, .9) 0%,
+    rgba($color-white, .9) 100%) ,
+         url(../img/nat-10.jpg);
+         background-size: cover;
+    }
 
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
