--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -599,10 +599,10 @@ body {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 23;
+  z-index: 40;
   opacity: 0;
   visibility: hidden;
-  transition: all .3s; }
+  transition: all .2s; }
   .popup__content {
     position: absolute;
     top: 50%;
@@ -616,17 +616,32 @@ body {
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.5);
     transition: all .4s .2s; }
+    @media (max-width: 75em) {
+      .popup__content {
+        display: block; } }
   .popup__left {
     width: 33.333333%;
     display: table-cell; }
+    @media (max-width: 75em) {
+      .popup__left {
+        display: flex;
+        width: 50%;
+        height: 30rem; } }
+    @media (max-width: 37.5em) {
+      .popup__left {
+        display: none; } }
   .popup__right {
     width: 66.6666667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 75em) {
+      .popup__right {
+        text-align: center; } }
   .popup__img {
     display: block;
-    width: 100%; }
+    width: 100%;
+    object-fit: cover; }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -634,6 +649,12 @@ body {
     column-gap: 4rem;
     column-rule: 1px solid #eee;
     hyphens: auto; }
+    @media (max-width: 75em) {
+      .popup__text {
+        text-align: justify; } }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        column-count: 1; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
