--- a/Natours/starter/sass/components/_popup.scss
+++ b/Natours/starter/sass/components/_popup.scss
@@ -5,10 +5,10 @@
     top:0;
     left: 0;
     background-color: rgba($color-black, .8);
-    z-index: 23;
+    z-index: 40;
     opacity: 0;
     visibility: hidden;
-    transition: all .3s;
+    transition: all .2s;
 
     &__content {
         @include absCenter;
@@ -21,11 +21,23 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(.5);
         transition: all .4s .2s;
+        @include respond(tab-land) {
+            display: block;
+        }
     }
 
     &__left{
         width: 33.333333%;
         display: table-cell;
+        @include respond(tab-land) {
+            display: flex;
+            width: 50%;
+            height: 30rem;
+        }
+
+        @include respond(phone) {
+            display: none;
+        }
         
     }
     
@@ -34,11 +46,15 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+        @include respond(tab-land) {
+            text-align: center;
+        }
     }
     
     &__img {
         display: block;
         width: 100%;
+        object-fit: cover;
     }
 
     &__text {
@@ -48,6 +64,12 @@
         column-gap: 4rem; //1em = 14px
         column-rule: 1px solid $color-grey-light-2;
         hyphens: auto;
+        @include respond(tab-land) {
+            text-align: justify;
+        }
+        @include respond(phone) {
+            column-count: 1;
+        }
     }
     
     &:target {
