--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -275,7 +275,7 @@ body {
         .composition__photo--p2 {
           top: -1rem;
           transform: scale(1.3);
-          z-index: 30; } }
+          z-index: 17; } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
@@ -799,8 +799,8 @@ body {
       right: 4rem; } }
   @media (max-width: 37.5em) {
     .navigation__button {
-      top: 2rem;
-      right: 2rem; } }
+      top: 93%;
+      left: 43%; } }
 
 .navigation__background {
   height: 6rem;
@@ -819,8 +819,8 @@ body {
       right: 4.5rem; } }
   @media (max-width: 37.5em) {
     .navigation__background {
-      top: 2.5rem;
-      right: 2.5rem; } }
+      left: calc(43% + 5px);
+      top: calc(93% + 5px); } }
 
 .navigation__nav {
   height: 100vh;
