--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -24,10 +24,12 @@
             right: 4rem;
         }
         @include respond(phone) {
-            top: 2rem;
-            right: 2rem;
+            // top: 2rem;
+            // right: 2rem;
+            top: 93%;
+            left: 43%;
         }
-    
+
     }
 
     &__background {
@@ -46,8 +48,10 @@
             right: 4.5rem;
         }
         @include respond(phone) {
-            top: 2.5rem;
-            right: 2.5rem;
+            // top: 2.5rem;
+            // right: 2.5rem;
+            left: calc(43% + 5px);
+            top: calc(93% + 5px);
         }
     }
     &__nav {
@@ -83,7 +87,7 @@
         color: $color-white;
         text-transform: uppercase;
         text-decoration: none;
-        background-image: linear-gradient(120deg, transparent 0% , transparent 50%, $color-white 50%); 
+        background-image: linear-gradient(120deg, transparent 0% , transparent 50%, $color-white 50%);
         background-size:220%;
         transition: all .5s;
         backface-visibility: hidden;
@@ -103,7 +107,7 @@
 
     &__checkbox:checked ~ &__background {
        transform: scale(80);
-        
+
     }
     &__checkbox:checked ~&__nav {
         opacity: 1;
@@ -137,8 +141,8 @@
         &::after {
             content: "";
             position: absolute;
-            left: 0;         
-            transition: all .2s;   
+            left: 0;
+            transition: all .2s;
         }
         &::before {top:-.8rem}
         &::after {bottom:-.8rem}
