moved the navigation out of viewport if it's hidden

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -827,7 +827,7 @@ body {
   width: 100%;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -50%;
   z-index: 21;
   opacity: 0;
   width: 0;
@@ -868,7 +868,8 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  width: 100%;
+  left: 0; }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon {
   background-color: transparent; }
