--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -59,7 +59,7 @@
         width: 100%;
         position: fixed;
         top: 0;
-        left: 0;
+        left: -50%;
         z-index: 21;
         opacity: 0;
         width: 0;
@@ -112,6 +112,7 @@
     &__checkbox:checked ~&__nav {
         opacity: 1;
         width: 100%;
+        left: 0;
     }
     &__checkbox:checked + &__button &__icon {
         background-color: transparent;
