--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -823,8 +823,8 @@ body {
       right: 4rem; } }
   @media (max-width: 37.5em) {
     .navigation__button {
-      top: 93%;
-      left: 43%; } }
+      top: 2rem;
+      right: 2rem; } }
 
 .navigation__background {
   height: 6rem;
@@ -843,8 +843,8 @@ body {
       right: 4.5rem; } }
   @media (max-width: 37.5em) {
     .navigation__background {
-      left: calc(43% + 5px);
-      top: calc(93% + 5px); } }
+      top: 2.5rem;
+      right: 2.5rem; } }
 
 .navigation__nav {
   height: 100vh;
