--- a/Natours/starter/sass/layout/_header.scss
+++ b/Natours/starter/sass/layout/_header.scss
@@ -17,9 +17,9 @@
         clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); /* creates a clipping region that defines what part of an element should be displayed*/
     }
 
-    @media (min-resolution: 192dpi) and (min-width: 37.5em),// 600px/16
-            (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), //safari support
-            (min-width: 125em) { //2000px/16
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),// 600px/16
+            only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), //safari support
+            only screen and (min-width: 125em) { //2000px/16
         background-image: linear-gradient( 
             to right bottom, 
            rgba( $color-secondary-light, 0.8),
